--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-    "private": true,
-    "type": "module",
+    "name": "casinco",
+    "version": "1.0.0",
     "scripts": {
-        "dev": "vite",
         "build": "vite build"
     },
+    "dependencies": {
+        "alpinejs": "^3.13.10",
+        "axios": "^1.6.8",
+        "laravel-vite-plugin": "^0.1.0",
+        "vite": "^2.0.0"
+    },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
-        "alpinejs": "^3.4.2",
+        "@tailwindcss/forms": "^0.5.7",
         "autoprefixer": "^10.4.19",
-        "axios": "^1.6.4",
-        "laravel-mix": "^6.0.49",
-        "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.38",
-        "tailwindcss": "^3.4.1",
-        "vite": "^5.0"
+        "tailwindcss": "^3.4.3"
     }
 }
